@@ -3,9 +3,9 @@
 float i;
 
 //define the size of your matrix here. the maximal size is 16x16!
-int PIXELS_X = 16;
-int PIXELS_Y = 16;
-int DATA_SIZE = PIXELS_X*8 * PIXELS_Y*8;
+int PIXELS_X = 96;
+int PIXELS_Y = 72;
+int DATA_SIZE = PIXELS_X * PIXELS_Y;
 
 //the maximal UDP packet size
 int MAXIMAL_UDP_PACKET_SIZE = 65507;
@@ -23,7 +23,7 @@ float geschwindigkeit = 0.002;
 void setup()
 {
   frameRate(30);
-  size(PIXELS_X*8, PIXELS_Y*8);
+  size(PIXELS_X, PIXELS_Y);
   println("\nOSC Packet size: "+DATA_SIZE*BPP);
   if (DATA_SIZE*BPP > MAXIMAL_UDP_PACKET_SIZE) {
     println("ERROR, you use OSC to send that much data (UDP Packet size limit is 64k). Lower your resolution.");
